# aria-os

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
agent/: aria_agent.py  context.py  executor.py  main_agent.py  planner.py  requirements.txt  server.py  tool_loader.py  tool_registry.py
agent/android/: __init__.py  accessibility_service.py  adb_bridge.py  adb_manager.py  app_launcher.py  notifications.py  screen_reader.py
agent/llm/: __init__.py  client.py  prompts.py
agent/memory/: long_term.py  session.py
agent/tools/: base.py
agent/tools/implementations/: __init__.py  browser_tool.py  calendar_tool.py  contacts_tool.py  email_tool.py  food_order_tool.py  grocery_tool.py  maps_tool.py  music_tool.py  phone_tool.py  reminders_tool.py  settings_tool.py  sms_tool.py  weather_tool.py  web_search_tool.py
agent/voice/: pipeline.py  wake_word.py
apps/accessibility-service/: README.md  build.gradle  settings.gradle
apps/accessibility-service/app/: build.gradle  proguard-rules.pro
apps/aria_ui/: pubspec.yaml
apps/aria_ui/lib/: main.dart  task_progress.dart  voice_mode.dart
aria-app/: pubspec.yaml
aria-app/android/app/: build.gradle  (+1 more)
aria-app/lib/: app.dart  main.dart
demo/: DEMO_SCRIPT.md  demo.py  one_pager.md  pitch.html  setup.sh
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  DEMO_SETUP.md  ROADMAP.md  SETUP.md  SIDELOAD.md
scripts/: build.sh  build_apk.sh  install.sh  install_apk.sh
tests/: test_demo_flow.py  test_tools.py
(+46 files in other folders)
