[project]
name = "aria-os"
version = "0.1.0"
description = "AI-native Android OS — a personal agent that completely controls your phone"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "openai-whisper>=20250625",
    "edge-tts>=7.0.0",
    "aiohttp>=3.9.0",
    "sqlalchemy>=2.0.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
select = ["E", "F", "I"]
